test_cases/pass/p38.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x, y, z=10
x=1
y=2
PRINT: x & y & z
END SCRIPT
