test_cases/fail/f46.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
x=10/0
END SCRIPT
